--- a/src/main/resources/templates/Clothes.html
+++ b/src/main/resources/templates/Clothes.html
@@ -530,7 +530,7 @@
                             <h5
                                     th:if="${product.discountCreatedAt != null}"
                                     class="card-title mb-3"
-                                    th:text="${product.productName} + ' ' + (${product.price} * (100 - ${product.discount})) / 100 + ' KZT скидка'"></h5>
+                                    th:text="${product.productName} + ' ' + (${product.price} * (100 - ${product.discount})) / 100 + ' KZT скидка ' + ${product.discount} + '%'"></h5>
                         </a>
                         <p class="card-text mb-0" th:text="${product.productBrand} + ' | Это стильная и удобная мужская одежда,
                             созданная для комфорта и элегантности в повседневной жизни.'"></p>
