--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -454,7 +454,7 @@
 </header>
 
 <div class="body">
-    <form method="POST" action="/HomePage">
+    <form method="POST" action="/Login">
 
         <h2 class="h2">БУДЬ С НАМИ В МОДЕ</h2>
         <h2 class="logo">Men's Shop</h2>
